--- a/karlos.config
+++ b/karlos.config
@@ -1,5 +1,6 @@
 CONTROLLERFLAG = [bool]    # starts with controller mode if true
 NETWORKFLAG    = [bool]    # turns on networking if true     
 CAMERAFLAG     = [bool]    # turns on camera if networking is also true
+THREEDMODE     = [bool]    # switches to 2d xy planar coordinates
 MQTTSERVER     = ["str"]   # sets the server ip. should be used with NETWORKFLAG
 MQTTPATH       = ["str"]   # sets the server channel. should be used with NETWORKFLAG
